# DadosAbertosBrasil

./: .gitignore  MANIFEST  README.md  camara.py  desktop.ini  favoritos.py  ibge.py  ipea.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
DadosAbertosBrasil/: __init__.py  _utils.py  bacen.py  camara.py  favoritos.py  ibge.py  ipea.py  senado.py  setup.py  tse.py  uf.py
DadosAbertosBrasil/_ibge/: __init__.py  cidades.py  misc.py  nomes.py  sidra.py
DadosAbertosBrasil/_utils/: __init__.py  errors.py  get_data.py  parse.py
DadosAbertosBrasil/bacen/: __init__.py  _cambio.py  _expectativas.py  _moedas.py  _serie.py  _utils.py
DadosAbertosBrasil/camara/: __init__.py  _blocos.py  _deputados.py  _eventos.py  _frentes.py  _legislaturas.py  _orgaos.py  _partidos.py  _proposicoes.py  _referencias.py  _votacoes.py
DadosAbertosBrasil/favoritos/: __init__.py
DadosAbertosBrasil/ibge/: __init__.py  _cidades.py  _misc.py  _nomes.py  _sidra.py  misc.py
Exemplos/: Acesso a energia elétrica.ipynb  Correlação de Indicadores Macroeconômicos.ipynb  Deputados por Estado, Sexo e Partido.ipynb  Gráfico de Densidade Populacional.ipynb  Nomes de Apóstolos mais Comuns.ipynb  Produtos mais Impactados pelo Dólar.ipynb  Proporção de Deputados por Sexo.ipynb  Rendimento Domiciliar por Municípios.ipynb
data/: Coordenadas.xlsx  Eleitorado.csv  governadores.json
docs/: DadosAbertosBrasil.bacen.rst  DadosAbertosBrasil.camara.rst  DadosAbertosBrasil.favoritos.rst  DadosAbertosBrasil.ibge.rst  DadosAbertosBrasil.ipea.rst  DadosAbertosBrasil.rst  DadosAbertosBrasil.senado.rst  DadosAbertosBrasil.uf.rst  DadosAbertosBrasil.utils.rst  conf.py  index.rst  modules.rst
scripts/: scrape_governadores.py
tests/: test_bacen.py  test_camara.py  test_favoritos.py  test_ibge.py  test_ipea.py  test_senado.py  test_uf.py
(+21 files in other folders)
