[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DadosAbertosBrasil"
version = "2.1.0"
description = "Pacote Python para acesso a dados abertos e APIs do governo brasileiro."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gustavo Furtado", email = "gustavofurtado2@gmail.com"},
]
keywords = [
    "brasil",
    "ibge",
    "ipea",
    "ipeadata",
    "camara",
    "deputados",
    "senado",
    "senadores",
    "bacen",
    "bcb",
    "bancocentral",
    "dadosabertos",
    "dadosgovbr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pydantic",
    "requests>=2.3.3",
    "urllib3>=2.6.3",
]

[project.urls]
Homepage = "https://github.com/GusFurtado/DadosAbertosBrasil"
Documentation = "https://www.gustavofurtado.com/DadosAbertosBrasil"
Download = "https://github.com/GusFurtado/DadosAbertosBrasil/archive/2.1.0.tar.gz"

[tool.setuptools.packages.find]
include = ["DadosAbertosBrasil*"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
]
